# chatterly

./: .gitignore  README.md  pyproject.toml  pyproject_edge.toml  requirements.txt
data/: claude-sonnet-4-20250514_output.json  consolidate.json  gemini-2_0-flash_output.json  go_questions.json  gpt-4_output.json  llama-3_3-70b-versatile_output.json  llama_respons.json
sessions/: ss_20251022052529.json
sessions/Go_Lang/: Go_Lang_20251106083343.json  Go_Lang_20251106090241.json  Go_Lang_20251106095120.json  Go_Lang_20251106103102.json
sessions/Introduce_Yourself/: Introduce_Yourself_20251105085743.json
sessions/Maths_Test/: Maths_Test_20251109045655.json
sessions/VA_Group/: VA_Group_20251110051701.json
src/chatterly/: __main__.py
src/chatterly/agent/: agent.py
src/chatterly/audio/: audio.py  model.py
src/chatterly/cl/: comloop.py  comloop_xtts,py  commgr.py
src/chatterly/eval/: evaluator.py  evaluator_autogen.py  llm_factory.py  llm_factory_autogen.py  refree.py  singleton.py
src/chatterly/loop/: agent.py  cl_agent.py  question_queue.py  scheduler.py  session.py  session_manager.py  user.py  vad.py
src/chatterly/poc/cuda/: main.py
src/chatterly/refree/: refree.py
src/chatterly/user/: vad.py
src/chatterly/utils/: constants.py  load_json.py  log_exec_time.py
src/playground/: logger.py  main.py  question.json
src/playground/core/: agent.py  main.py  one_file.py  session.py  state.py  user.py
src/playground/core-v1/: main.py
src/playground/go/: main.go
src/playground/tts/: cuda.py  main.py  optimized_xtts.py
(+14 files in other folders)
