[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatterly"
version = "0.1.0"
authors = [
  { name="Rupak Kumar...", email="rupak.kumar.ambasta@gmail.com" },
]
description = "A short description of your project."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Any external libraries your project depends on
    "numpy==1.22.0",
    "transformers==4.33.0",
    "tts==0.22.0",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "sounddevice>=0.4.6",
    "scipy>=1.10.0",
    "sentencepiece>=0.1.99",
    "onnxruntime>=1.16.0",
    "protobuf>=4.23.4",
    "typing-extensions>=4.8.0",
    "aiohttp>=3.9.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.1",
    "rich>=13.6.0",
    "loguru>=0.7.2",
    "edge_tts",
    "janus",
    "faster_whisper",
    "aiofiles",
    "pyttsx3",
    "langchain",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-anthropic",
    "langchain-groq",
    "python-dotenv"

]

[project.scripts]
chatterly = "chatterly.__main__:main"